# hildon-status-bar-usb

./: HOW_TO_COMPILE  Makefile  Makefile.am  configure.ac  gadget-helper.c  hal-helper.c  hal-helper.h  hildon-status-menu-usb.desktop  udev-helper.c  udev-helper.h  usb-plugin.c
debian/: changelog  control  gbp.conf  prerm  rules
